--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -26,10 +26,9 @@ body.home
 				//- 		.featured-thumbnail-wrapper
 				//- 			img(src="_img/tbi_1.png", width="800", height="600", alt="Screenshot of interactive model of traumatic brain injury in football players")
 				//- 		.featured-meta
-				//- 			h3.new-featured-content New
 				//- 			h2 
+				//- 				.new-featured-content New
 				//- 				| How playing football affects the brain
-				//- 				+icon("rarr")
 				//- 			p New research indicates that brain damage can occur in football players in the absence of concussion.
 				.featured-grid-item 
 					a.featured-content(href="https://www.youtube.com/watch?v=5K66gj5e4Mk")
@@ -39,17 +38,13 @@ body.home
 									.icon-youtube-wrapper
 										+icon("youtube")
 						.featured-meta
-							h2 
-								| Mapping language ability during awake brain surgery
-								+icon("rarr")
+							h2 Mapping language ability during awake brain surgery
 				.featured-grid-item 
 					a.featured-content(href="/brainsurvey")
 						.featured-thumbnail-wrapper
 							img(src="_img/brain_survey.jpg", width="800", height="600", alt="Screenshot of Brain Survey website")
 						.featured-meta
-							h2 
-								| Brain Survey
-								+icon("rarr")
+							h2 Brain Survey
 							p Explore the human brain
 				.featured-grid-item 
 					a.featured-content(href="https://www.youtube.com/watch?v=95NMmqaFAKE")
@@ -59,9 +54,7 @@ body.home
 									.icon-youtube-wrapper
 										+icon("youtube")
 						.featured-meta
-							h2 
-								| Brain mapping for music
-								+icon("rarr")
+							h2 Brain mapping for music
 							p Music is not only a major part of Dan Fabbio’s life, as a music teacher it is his livelihood. So when doctors discovered a tumor located in the part of his brain responsible for music function, he began a long journey that involved a team of University of Rochester physicians, scientists, and a music professor and culminated with him awake and playing a saxophone as surgeons operated on his brain.  
 
 	+footer()
