--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -33,7 +33,7 @@ $gray: #3a4a52;
 $green: #336d35;
 $orange: #d17c00;
 $purple: #673ab7;
-$red: #e53935;
+$red: #9a3434;
 $turquoise: #0ba2b5;
 
 $twitter: #38a1f3;
@@ -150,6 +150,7 @@ h4 {
 }
 
 p {
+	font-size: 1em;
 	margin-bottom: var(--medium);
 
 	&:last-child {
@@ -292,8 +293,8 @@ header {
 	transition: color var(--transition);
 
 	&:hover {
-		transition-duration: var(--transition-hover);
 		text-decoration: none;
+		color: $gray-800;
 	}
 }
 
@@ -469,15 +470,12 @@ header {
 	box-shadow: inset 0 var(--small) $blue;
 	background: $black;
 }
-.join-page .join-group .main-nav-link {
-	box-shadow: inset 0 var(--small) $green;
-	background: $black;
-}
 
 .publications-page .publications-group .main-nav-link,
 .media-page .media-group .main-nav-link,
 .about-page .about-group .main-nav-link,
-.consortium-page .consortium-group .main-nav-link {
+.consortium-page .consortium-group .main-nav-link,
+.join-page .join-group .main-nav-link {
 	background: $black;
 
 	@media (min-width: $tablet) {
@@ -497,6 +495,10 @@ header {
 	background-color: $gray;
 	overflow: hidden;
 
+	.home-page & {
+		background-color: $red;
+	}
+
 	.discover-page & {
 		background-color: $turquoise;
 	}
@@ -505,9 +507,6 @@ header {
 	}
 	.learn-page & {
 		background-color: $blue;
-	}
-	.join-page & {
-		background-color: $green;
 	}
 
 	.container {
@@ -561,6 +560,7 @@ header {
 
 // Mission ===============================================================================
 .mission-section {
+	background-color: mix($blue, $black);
 	color: $white;
 	overflow: hidden;
 
@@ -568,29 +568,82 @@ header {
 		position: relative;
 		padding-bottom: 7rem;
 	}
+}
 
-	p {
-		font-size: 1.5em;
-		max-width: $tablet;
+.mission-points {
+	position: relative;
+	font-size: 1.2em;
+
+	@media (min-width: $tablet) {
+		font-size: 1.3em;
+	}
+	@media (min-width: $desktop) {
+		font-size: 1.4em;
+	}
+}
+
+.mission-point {
+	$duration: 30s;
+	position: absolute;
+	top: 0;
+	max-width: $tablet;
+	animation: mission $duration ease-in-out infinite both;
+	opacity: 0;
+	margin: 0 !important;
+	word-break: break-word;
+
+	&.spacer {
+		pointer-events: none;
+		position: relative;
+		opacity: 0;
+		animation: none;
+	}
+
+	@keyframes mission {
+		0%,
+		65% {
+			opacity: 0;
+		}
+		70%,
+		90% {
+			opacity: 1;
+		}
+		95%,
+		100% {
+			opacity: 0;
+		}
+	}
+
+	@for $i from 1 through 4 {
+		&:nth-child(#{$i}) {
+			animation-delay: ($i/4 * $duration) - $duration;
+		}
+	}
+}
+
+.brain-graphic-wrapper {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+
+	@media (min-width: $tablet) {
+		justify-content: flex-end;
 	}
 }
 
 .brain-graphic {
-	position: absolute;
-	top: 0;
-	bottom: 0;
 	width: 100%;
-	height: 100%;
+	height: auto;
 	transform: scaleX(-1);
-	opacity: 0.2;
+	opacity: 0.15;
 
 	@media (min-width: $tablet) {
-		top: 0;
-		right: 0;
-		bottom: 0;
-		width: 50%;
-		height: auto;
-		transform: translateY(-20%) scaleX(-1);
+		width: 55%;
 	}
 
 	circle {
@@ -599,13 +652,13 @@ header {
 				fill: white;
 			}
 		}
-	}
-}
 
-@for $i from 1 through 30 {
-	.brain-graphic circle:nth-of-type(#{$i}) {
-		animation: pulse 5s ease-in-out infinite;
-		animation-delay: 0.15s * $i;
+		@for $i from 1 through 30 {
+			&:nth-of-type(#{$i}) {
+				animation: pulse 5s ease-in-out infinite;
+				animation-delay: 0.15s * $i;
+			}
+		}
 	}
 }
 
@@ -1135,14 +1188,14 @@ header {
 	}
 
 	button[type="submit"] {
-		background: $green;
+		background: $blue;
 		color: $white;
 		padding: var(--large) var(--extra-large);
 		min-width: 33%;
 		transition: background-color var(--transition);
 
 		&:hover {
-			background: shade($green, 25%);
+			background: shade($blue, 25%);
 			transition-duration: var(--transition-hover);
 		}
 	}
