--- a/src/jade/tbi/index.jade
+++ b/src/jade/tbi/index.jade
@@ -32,6 +32,7 @@ body.discover-page.tbi-page
 					.split-wrapper
 						.canvas-wrapper
 							canvas
+							h2.canvas-figure-label Fig. 1
 							.intensity-container.container
 								.intensity-bar
 								.intensity-label
@@ -41,15 +42,20 @@ body.discover-page.tbi-page
 								.spinner
 						.meta-wrapper
 							.data-set.figure_1(onclick="run(datasets_obj.figure_1)", tabindex="-1")
+								h3 
+									| Fig. 1
+									.data-set-run
+										| Run model
+										+icon('rarr')
 								p Interactive model of data from Figure 1 in Hirad and colleagues (2019). Visualization of spatial distribution of head hits in 38 collegiate football players in a season of play. The color and length of each line is scaled by the log of the count of hits at that location.
-								.data-set-run
-									| Run model
-									+icon('rarr')
-							.data-set.figure_2(onclick="run(datasets_obj.figure_2)", tabindex="-1")
+							.data-set.figure_6(onclick="run(datasets_obj.figure_6)", tabindex="-1")
+								h3 
+									| Fig. 6
+									.data-set-run
+										| Run model
+										+icon('rarr')
 								p Interactive model of data from Figure 6 in Hirad and colleagues (2019). The 3D model shown here is a graphical representation of how force loading from head hits during football (practice and games) is related to differences between damage to the left and right hemispheres of the brain.
-								.data-set-run
-									| Run model
-									+icon('rarr')
+								
 
 	+footer()
 	script(src="../_js/three.min.js")
