--- a/src/jade/_partials/_svg.jade
+++ b/src/jade/_partials/_svg.jade
@@ -2,6 +2,10 @@ mixin svg()
 	svg(style="display: none", xmlns="http://www.w3.org/2000/svg")
 		symbol#cycle-uarr(viewbox="0 0 20 20")
 			path(d="M10 18 L10 2 M7 5.5 L10 2 L13 5.5", stroke="currentColor", stroke-width="1", fill="none", stroke-linecap="round", stroke-linejoin="round")
+		symbol#run(viewbox="0 0 6 6")
+			path(d="M 1 1 L 5 3 L 1 5 Z", stroke="currentColor", stroke-width="1", fill="currentColor", stroke-linecap="round", stroke-linejoin="round")
+		symbol#running(viewbox="0 0 6 6")
+			circle(cx="3", cy="3", r="3", fill="currentColor")
 		symbol#cycle-darr(viewbox="0 0 20 20")
 			path(d="M2 4 L 7 4 C7 4 13 4 13 10 M 13 10 L13 18 M16 14.5 L13 18 L10 14.5", stroke="currentColor", stroke-width="1", fill="none", stroke-linecap="round", stroke-linejoin="round")
 		symbol#menu(viewbox="0 0 6 6")
