--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -15,11 +15,12 @@ body.home-page
 					+brain_graphic()
 				.container
 					.mission-points
-						p.mission-point The Open Brain Project is a consortium of scientists and clinicians dedicated to advancing knowledge about brain injury
-						p.mission-point The Open Brain Project is a meta-analytic engine to understand how focal brain lesions cause sensory, cognitive and motor function
-						p.mission-point The Open Brain Project is a hub to connect patients and their families with resources to manage their condition
-						p.mission-point The Open Brain Project is a forum to share research papers, data, and experimental protocols related to neuropsychological research
-						p.mission-point.spacer The Open Brain Project is a forum to share research papers, data, and experimental protocols related to neuropsychological research
+						p.mission-point A consortium of scientists and clinicians dedicated to advancing knowledge about brain injury
+						p.mission-point A meta-analytic engine to understand how focal brain lesions cause sensory, cognitive and motor function
+						p.mission-point A hub to connect patients and their families with resources to manage their condition
+						//- p.mission-point An open science platform for neuropsychological research
+						p.mission-point A forum to share research papers, data, and experimental protocols related to neuropsychological research
+						p.mission-point.spacer A forum to share research papers, data, and experimental protocols related to neuropsychological research
 		section.featured-content-section
 			.wrapper.featured-grid-wrapper
 				.featured-grid-column
@@ -31,8 +32,15 @@ body.home-page
 				//- 		.featured-meta
 				//- 			h2 
 				//- 				.new-featured-content New
-				//- 				| How playing football affects the brain
+				//- 				| How football affects the brain
 				//- 			p New research indicates that brain damage can occur in football players in the absence of concussion.
+				.featured-grid-item 
+					a.featured-content(href="/brainsurvey")
+						.featured-thumbnail-wrapper
+							img(src="_img/brain_survey.jpg", width="800", height="600", alt="Screenshot of Brain Survey website")
+						.featured-meta
+							h2 Brain Survey
+							p Explore the human brain
 				.featured-grid-item 
 					a.featured-content(href="https://www.youtube.com/watch?v=5K66gj5e4Mk")
 						.featured-thumbnail-wrapper
@@ -42,13 +50,6 @@ body.home-page
 										+icon("youtube")
 						.featured-meta
 							h2 Mapping language ability during awake brain surgery
-				.featured-grid-item 
-					a.featured-content(href="/brainsurvey")
-						.featured-thumbnail-wrapper
-							img(src="_img/brain_survey.jpg", width="800", height="600", alt="Screenshot of Brain Survey website")
-						.featured-meta
-							h2 Brain Survey
-							p Explore the human brain
 				.featured-grid-item 
 					a.featured-content(href="https://www.youtube.com/watch?v=95NMmqaFAKE")
 						.featured-thumbnail-wrapper
