--- a/src/jade/tbi/index.jade
+++ b/src/jade/tbi/index.jade
@@ -4,12 +4,12 @@ include ../_partials/_svg
 include ../_partials/_icon
 include ../_partials/_footer
 
-+head("Traumatic Brain Injury Explorer")
++head("How football affects the brain")
 body.discover-page.tbi-page
 	+header("tbi")
 	.page-hero
 		.container
-			h1 How playing football affects the brain
+			h1 How football affects the brain
 	main.page-content
 		section
 			.container
