--- a/src/jade/_partials/_head.jade
+++ b/src/jade/_partials/_head.jade
@@ -2,22 +2,16 @@ mixin head(pageTitle, pageDescription)
 	doctype html
 	html(lang="en")
 		head
-			// Essentials
 			meta(charset="utf-8")
 			meta(name="viewport", content="width=device-width, initial-scale=1")
 			
-			// Page title
 			- if (pageTitle === "")
-				title= "The Open Brain Project | Discover, Translate, Care"
+				title= "The Open Brain Project | Translating discovery into care"
 			- else
 				title=pageTitle + " | The Open Brain Project"
 
 			// Page description
 			meta(name="description", content="The Open Brain Project is a consortium of scientists and clinicians dedicated to advancing knowledge about how the human brain responds to and recovers from injury.")
-			// - if (pageDescription == "")
-			// 	meta(name="description", content="The Open Brain Project is a consortium of scientists and clinicians dedicated to advancing knowledge about how the human brain responds to and recovers from injury.")
-			// - else
-			// 	meta(name="description", content=pageDescription)
 			
 			// Styles
 			link(href="../../_css/style.min.css", rel="stylesheet")
@@ -30,9 +24,7 @@ mixin head(pageTitle, pageDescription)
 			link(rel="mask-icon", href="../../_img/safari-pinned-tab.svg", color="#fa8072")
 			
 			// Web appification
-			// meta(name="theme-color", content="#959ba6")
 			meta(name="application-name" content="Open Brain Project")
-			// meta(name="msapplication-TileColor", content="#959ba6")
 			meta(name="rating" content="General")
 			meta(name="mobile-web-app-capable", content="yes")
 			meta(name="google-site-verification", content="YOgvR065o47Z7E6-UDzVZc-Tbc0Th79ThLqpP3tEP7k")
@@ -41,7 +33,6 @@ mixin head(pageTitle, pageDescription)
 			meta(http-equiv="x-ua-compatible", content="ie=edge")
 
 			// Facebook meta
-			// meta(property="fb:app_id" content="123456789")
 			meta(property="og:url" content="https://openbrainproject.org")
 			meta(property="og:type" content="website")
 			meta(property="og:title" content="The Open Brain Project")
@@ -54,8 +45,7 @@ mixin head(pageTitle, pageDescription)
 
 			// Twitter meta
 			meta(name="twitter:card" content="summary")
-			// meta(name="twitter:site" content="@site_account")
-			// meta(name="twitter:creator" content="@individual_account")
+			meta(name="twitter:site" content="@OpenBrainPro")
 			meta(name="twitter:url" content="https://openbrainproject.org")
 			meta(name="twitter:title" content="The Open Brain Project")
 			meta(name="twitter:description" content="The Open Brain Project is a consortium of scientists and clinicians dedicated to advancing knowledge about how the human brain responds to and recovers from injury.")
