--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -16,9 +16,8 @@ body.home-page
 				.container
 					.mission-points
 						p.mission-point A consortium of scientists and clinicians dedicated to advancing knowledge about brain injury
-						p.mission-point A meta-analytic engine to understand how focal brain lesions cause sensory, cognitive and motor function
+						p.mission-point A meta-analytic engine to relate locations of brain injury to sensory, cognitive and motor performance
 						p.mission-point A hub to connect patients and their families with resources to manage their condition
-						//- p.mission-point An open science platform for neuropsychological research
 						p.mission-point A forum to share research papers, data, and experimental protocols related to neuropsychological research
 						p.mission-point.spacer A forum to share research papers, data, and experimental protocols related to neuropsychological research
 		section.featured-content-section
