--- a/src/jade/_partials/_footer.jade
+++ b/src/jade/_partials/_footer.jade
@@ -4,7 +4,7 @@ mixin footer()
 	footer
 		.container
 			span.left
-				| Find us on <a href="http://facebook.com">Facebook</a> and <a href="https://twitter.com">Twitter</a>
+				| Find us on <a href="https://www.facebook.com/TheOpenBrainProject/">Facebook</a> and <a href="https://twitter.com/OpenBrainPro">Twitter</a>
 			span.right
 				<a href="/join" class="right"><svg class="icon icon-join"><use xlink:href="#join"></use></svg>Join the Open Brain Project</a>
 	script(src="../_js/colcade.min.js")
