--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -24,6 +24,13 @@ body.home-page
 			.wrapper.featured-grid-wrapper
 				.featured-grid-column
 				.featured-grid-column
+				.featured-grid-item 
+					a.featured-content(href="/brainsurvey")
+						.featured-thumbnail-wrapper
+							img(src="_img/brain_survey.jpg", width="800", height="600", alt="Screenshot of Brain Survey website")
+						.featured-meta
+							h2 Brain Survey
+							p Explore a 3D model of the human brain
 				//- .featured-grid-item
 				//- 	a.featured-content(href="/tbi")
 				//- 		.featured-thumbnail-wrapper
@@ -33,13 +40,6 @@ body.home-page
 				//- 				.new-featured-content New
 				//- 				| How football affects the brain
 				//- 			p New research indicates that brain damage can occur in football players in the absence of concussion.
-				.featured-grid-item 
-					a.featured-content(href="/brainsurvey")
-						.featured-thumbnail-wrapper
-							img(src="_img/brain_survey.jpg", width="800", height="600", alt="Screenshot of Brain Survey website")
-						.featured-meta
-							h2 Brain Survey
-							p Explore the human brain
 				.featured-grid-item 
 					a.featured-content(href="https://www.youtube.com/watch?v=5K66gj5e4Mk")
 						.featured-thumbnail-wrapper
@@ -57,7 +57,7 @@ body.home-page
 									.icon-youtube-wrapper
 										+icon("youtube")
 						.featured-meta
-							h2 Brain mapping for music
-							p Music is not only a major part of Dan Fabbio’s life, as a music teacher it is his livelihood. So when doctors discovered a tumor located in the part of his brain responsible for music function, he began a long journey that involved a team of University of Rochester physicians, scientists, and a music professor and culminated with him awake and playing a saxophone as surgeons operated on his brain.  
+							h2 Brain mapping for music  
+
 
 	+footer()
