--- a/src/jade/how-football-affects-the-brain/index.jade
+++ b/src/jade/how-football-affects-the-brain/index.jade
@@ -4,7 +4,7 @@ include ../_partials/_svg
 include ../_partials/_icon
 include ../_partials/_footer
 
-+head("How football affects the brain")
++head("How football affects the brain", "New research indicates that brain damage can occur in football players in the absence of concussion.", "https://openbrainproject.org/_img/tbi_1.png")
 body.discover-page.tbi-page
 	+header("tbi")
 	.page-hero
