--- a/src/jade/join/index.jade
+++ b/src/jade/join/index.jade
@@ -35,19 +35,19 @@ body.join-page
 						.container
 							| I am a:
 							br
-							label.checkbox-wrapper
+							label.checkbox-wrapper(tabindex="-1")
 								input(type="checkbox", id="scientist", value="true" name="i_am_a_scientist")
 								| Scientist
 							br
-							label.checkbox-wrapper
+							label.checkbox-wrapper(tabindex="-1")
 								input(type="checkbox", id="clinician", value="true" name="i_am_a_clinician")
 								| Clinician
 							br
-							label.checkbox-wrapper
+							label.checkbox-wrapper(tabindex="-1")
 								input(type="checkbox", id="true", value="true" name="i_am_a_patient_or_family")
 								| A patient or a family member of a patient
 							br
-							label.checkbox-wrapper
+							label.checkbox-wrapper(tabindex="-1")
 								input(type="checkbox", id="just_interested", value="true" name="i_am_a_just_interested")
 								| Simply interested to learn more
 					section
@@ -62,27 +62,27 @@ body.join-page
 						.container
 							| I would like to:
 							br
-							label.checkbox-wrapper
+							label.checkbox-wrapper(tabindex="-1")
 								input(type="checkbox", id="sign_up_for_email_newsletter", value="true", name="i_would_like_to_sign_up_for_email_newsletter")
 								| Sign up for email newsletter
 							br
-							label.checkbox-wrapper
+							label.checkbox-wrapper(tabindex="-1")
 								input(type="checkbox", id="contribute_mri", value="true", name="i_would_like_to_contribute_mri")
 								| Contribute MRI data
 							br
-							label.checkbox-wrapper
+							label.checkbox-wrapper(tabindex="-1")
 								input(type="checkbox", id="contribute_behavioral", value="true", name="i_would_like_to_contribute_behavioral")
 								| Contribute behavioral data
 							br
-							label.checkbox-wrapper
+							label.checkbox-wrapper(tabindex="-1")
 								input(type="checkbox", id="share_experimental_protocols", value="true", name="i_would_like_to_share_experimental_protocols")
 								| Share experimental protocols or materials
 							br
-							label.checkbox-wrapper
+							label.checkbox-wrapper(tabindex="-1")
 								input(type="checkbox", id="post_videos", value="true", name="i_would_like_to_post_videos")
 								| Post videos of neuropsychological studies of patients
 							br
-							label.checkbox-wrapper
+							label.checkbox-wrapper(tabindex="-1")
 								input(type="checkbox", id="upload_data", value="true", name="i_would_like_to_upload_data")
 								| Upload data from my helmet-worn accelerometer
 					section
