--- a/src/jade/_partials/_header.jade
+++ b/src/jade/_partials/_header.jade
@@ -11,10 +11,8 @@ mixin header()
 						h1.site-title The Open Brain Project
 						h2.site-taglines 
 							.site-tagline Translating discovery into care
-							.site-tagline Learn, discover, translate
-							.site-tagline.long Better prediction through understanding  
+							.site-tagline.spacer Open science for neuropsychology
 							.site-tagline Big data, one brain at a time
-							.site-tagline.spacer.long Better prediction through understanding  
 			.right-header-content
 				a.header-social-link.twitter(href="https://twitter.com/OpenBrainPro", aria-label="Open Brain Project on Twitter")
 					+icon("twitter")
