--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -18,7 +18,6 @@ body.home-page
 						p.mission-point A consortium of scientists and clinicians dedicated to advancing knowledge about brain injury
 						p.mission-point A meta-analytic engine to relate locations of brain injury to sensory, cognitive and motor performance
 						p.mission-point A hub to connect patients and their families with resources to manage their condition
-						p.mission-point A forum to share research papers, data, and experimental protocols related to neuropsychological research
 						p.mission-point.spacer A forum to share research papers, data, and experimental protocols related to neuropsychological research
 		section.featured-content-section
 			.wrapper.featured-grid-wrapper
@@ -39,7 +38,7 @@ body.home-page
 				//- 			h2 
 				//- 				.new-featured-content New
 				//- 				| How football affects the brain
-				//- 			p New research indicates that brain damage can occur in football players in the absence of concussion.
+				//- 			p New research documents a type of brain damage that can occur in football players in the absence of concussion
 				.featured-grid-item 
 					a.featured-content(href="https://www.youtube.com/watch?v=5K66gj5e4Mk")
 						.featured-thumbnail-wrapper
