--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -31,7 +31,7 @@ body.home-page
 							h2 Brain Survey
 							p Explore a 3D model of the human brain
 				//- .featured-grid-item
-				//- 	a.featured-content(href="/tbi")
+				//- 	a.featured-content(href="/how-football-affects-the-brain")
 				//- 		.featured-thumbnail-wrapper
 				//- 			img(src="_img/tbi_1.png", width="800", height="600", alt="Screenshot of interactive model of traumatic brain injury in football players")
 				//- 		.featured-meta
