--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -30,15 +30,15 @@ body.home-page
 						.featured-meta
 							h2 Brain Survey
 							p Explore a 3D model of the human brain
-				//- .featured-grid-item
-				//- 	a.featured-content(href="/how-football-affects-the-brain")
-				//- 		.featured-thumbnail-wrapper
-				//- 			img(src="_img/tbi_1.png", width="800", height="600", alt="Screenshot of interactive model of traumatic brain injury in football players")
-				//- 		.featured-meta
-				//- 			h2 
-				//- 				.new-featured-content New
-				//- 				| How football affects the brain
-				//- 			p New research documents a type of brain damage that can occur in football players in the absence of concussion
+				.featured-grid-item
+					a.featured-content(href="/how-football-affects-the-brain")
+						.featured-thumbnail-wrapper
+							img(src="_img/tbi_1.png", width="800", height="600", alt="Screenshot of interactive model of traumatic brain injury in football players")
+						.featured-meta
+							h2 
+								.new-featured-content New
+								| How football affects the brain
+							p New research documents a type of brain damage that can occur in football players in the absence of concussion
 				.featured-grid-item 
 					a.featured-content(href="https://www.youtube.com/watch?v=5K66gj5e4Mk")
 						.featured-thumbnail-wrapper
