--- a/src/jade/about/index.jade
+++ b/src/jade/about/index.jade
@@ -31,7 +31,7 @@ body.about-page
 							p  How brain injury affects sensory, cognitive and motor function
 						.arrow-block.arrow-block-3
 							+icon("cycle-darr")
-				p.intro The Open Brain Project is a resource for patients, clinicians, scientists and students. It is designed to serve as a hub to facilitate research into how brain injury affects cognitive, sensory and motor function. It is open for anyone to join. We support posting and sharing of all research and clinical data that pertains to human neuropsychology, broadly construed.
+				p.lead The Open Brain Project is a resource for patients, clinicians, scientists and students. It is designed to serve as a hub to facilitate research into how brain injury affects cognitive, sensory and motor function. It is open for anyone to join. We support posting and sharing of all research and clinical data that pertains to human neuropsychology, broadly construed.
 				p <a href="/join"><svg class="icon icon-join"><use xlink:href="#join"></use></svg>Join the Open Brain Project</a> to receive information about how to post content on the website. 
 				p The Open Brain Project was established with resources from the laboratory of Dr. Brad Mahon at Carnegie Mellon University (including NIH Grants R01NS089609 and R01EY028535), as well as resources from the Department of Neurosurgery at the University of Rochester.
 				p The Open Brain Project will be applying for 501c3 (non-profit) status in early 2020. If you would like to support the Open Brain Project, please contact Dr. Brad Mahon at: <a href="mailto:OpenBrainProj@gmail.com">OpenBrainProj@gmail.com</a>
