--- a/src/jade/how-football-affects-the-brain/index.jade
+++ b/src/jade/how-football-affects-the-brain/index.jade
@@ -15,7 +15,7 @@ body.discover-page.tbi-page
 			.container
 				.split-container
 					.tbi-intro
-						p New research indicates that brain damage can occur in football players in the absence of concussion.
+						p.lead New research indicates that brain damage can occur in football players in the absence of concussion.
 						p Hirad and colleagues (2019) used MRI to measure the structural changes that occur in an athlete’s brain from a single season of football. They found stereotyped patterns of injury to a critical part of the brain, the midbrain. The injury was present even in players who never exhibited signs or symptoms of concussion.
 						p The tool below provides a visualization of how force loading during football affects brain structure.
 						p If you or your child play contact sports and use an accelerometer, please <a href="/join"><svg class="icon icon-join"><use xlink:href="#join"></use></svg>Join the Open Brain Project</a> to learn how you can upload data from your device to our consortium.
@@ -25,8 +25,8 @@ body.discover-page.tbi-page
 								.icon-youtube-wrapper
 									+icon("youtube")
 						p Hirad, Bazarian, Merchant-Borna, Garcea, Heilbronner, Paul, Hintz, van Wijngaarden, Schifitto, Wright, Espinoza, and Mahon. (2019). A common neural signature of brain injury in concussion and sub-concussion. Science Advances.
-				object.tbi-pdf(data="../_materials/example.pdf", type="application/pdf", width="100%" height="500")
-					p.tbi-pdf-unavailable It appears you don't have a PDF plugin for this browser. You can <a href="../_materials/example.pdf">click here to download the PDF file</a>.
+				//- object.tbi-pdf(data="../_materials/example.pdf", type="application/pdf", width="100%" height="500")
+				//- 	p.tbi-pdf-unavailable It appears you don't have a PDF plugin for this browser. You can <a href="../_materials/example.pdf">click here to download the PDF file</a>.
 			.tbi-interactive
 				.wrapper
 					.split-wrapper
