--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -729,16 +729,16 @@ header {
 }
 
 .featured-grid-column {
+	&:nth-child(2) {
+		display: none;
+	}
+
 	@media (min-width: $tablet) {
 		float: left;
 		width: 50%;
 
-		&:nth-child(1) {
-			// width: 55%;
-		}
-
 		&:nth-child(2) {
-			// width: 45%;
+			display: block;
 			padding-top: 4rem;
 		}
 	}
