--- a/src/jade/media/index.jade
+++ b/src/jade/media/index.jade
@@ -15,6 +15,13 @@ body.media-page
 	main.page-content
 		section
 			.container
+				h3 New research documents a type of brain damage that can occur in football players in the absence of concussion
+				:marked
+					* [ScienceMag.org: Just one season of playing football—even without a concussion—can cause brain damage](https://www.sciencemag.org/news/2019/08/just-one-season-playing-football-even-without-concussion-can-cause-brain-damage)
+					* [U.S. News &amp; World Report: Sub-Concussive Hits Cause Minor Brain Damage in College Athletes](https://www.usnews.com/news/healthiest-communities/articles/2019-08-07/study-sub-concussive-hits-cause-minor-brain-damage-in-college-athletes)
+					* [DailyMail: Stop focusing on concussions: Any head hits to football players can severely damage the brain and lead to CTE— whether they are concussed or not, study finds](https://www.dailymail.co.uk/health/article-7334101/ANY-head-hits-football-players-severely-damage-brain-concussed-not.html)
+					* [Earth.com: Even routine hits from playing football can cause serious brain damage](https://www.earth.com/news/routine-hits-football-brain-damage/)
+					* [MEAWW: Concussion not the only problem in football: New study shows that even routine hits can cause structural damage to brain](https://meaww.com/football-head-trauma-concussion-not-big-ones-routine-football-hits-game-brain-damage)
 				h3 Vision recovery after stroke affecting visual cortext
 				:marked
 					* [New Study Reshapes Understanding of How the Brain Recovers from Injury](https://www.urmc.rochester.edu/news/story/5519/new-study-reshapes-understanding-of-how-the-brain-recovers-from-injury.aspx)
