--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -872,7 +872,7 @@ header {
 .video-thumbnail {
 	position: relative;
 	padding-bottom: 56%;
-	background-color: $black;
+	background-color: $gray-300;
 	background-size: cover;
 	background-position: center center;
 	border-radius: var(--radius);
