--- a/src/jade/media/index.jade
+++ b/src/jade/media/index.jade
@@ -17,11 +17,17 @@ body.media-page
 			.container
 				h3 New research documents a type of brain damage that can occur in football players in the absence of concussion
 				:marked
-					* [ScienceMag.org: Just one season of playing football—even without a concussion—can cause brain damage](https://www.sciencemag.org/news/2019/08/just-one-season-playing-football-even-without-concussion-can-cause-brain-damage)
-					* [U.S. News &amp; World Report: Sub-Concussive Hits Cause Minor Brain Damage in College Athletes](https://www.usnews.com/news/healthiest-communities/articles/2019-08-07/study-sub-concussive-hits-cause-minor-brain-damage-in-college-athletes)
-					* [DailyMail: Stop focusing on concussions: Any head hits to football players can severely damage the brain and lead to CTE— whether they are concussed or not, study finds](https://www.dailymail.co.uk/health/article-7334101/ANY-head-hits-football-players-severely-damage-brain-concussed-not.html)
-					* [Earth.com: Even routine hits from playing football can cause serious brain damage](https://www.earth.com/news/routine-hits-football-brain-damage/)
-					* [MEAWW: Concussion not the only problem in football: New study shows that even routine hits can cause structural damage to brain](https://meaww.com/football-head-trauma-concussion-not-big-ones-routine-football-hits-game-brain-damage)
+					* [The New York Times: Football May Take a Toll on the Brain, Even Without Concussions](https://www.nytimes.com/2019/08/14/well/move/football-may-take-a-toll-on-the-brain-even-without-concussions.html)
+					* [ScienceMag: Just one season of playing football—even without a concussion—can cause brain damage](https://www.sciencemag.org/news/2019/08/just-one-season-playing-football-even-without-concussion-can-cause-brain-damage)
+				details
+					summary Show more
+					:marked
+						* [U.S. News &amp; World Report: Sub-Concussive Hits Cause Minor Brain Damage in College Athletes](https://www.usnews.com/news/healthiest-communities/articles/2019-08-07/study-sub-concussive-hits-cause-minor-brain-damage-in-college-athletes)
+						* [DailyMail: Stop focusing on concussions: Any head hits to football players can severely damage the brain and lead to CTE— whether they are concussed or not, study finds](https://www.dailymail.co.uk/health/article-7334101/ANY-head-hits-football-players-severely-damage-brain-concussed-not.html)
+						* [MEAWW: Concussion not the only problem in football: New study shows that even routine hits can cause structural damage to brain](https://meaww.com/football-head-trauma-concussion-not-big-ones-routine-football-hits-game-brain-damage)
+						* [Rochester Democrat and Chronicle: New research finds it's not just the big hits that damage football players' brains](https://www.democratandchronicle.com/story/news/education/2019/08/08/university-rochester-study-football-concussion-midbrain-mahon/1954249001/)
+						* [HealthDay: Steady Stream of Lesser Head Hits in Football Can Still Damage Brain](https://consumer.healthday.com/head-and-neck-information-17/head-injury-news-344/steady-stream-of-lesser-head-hits-in-football-can-still-damage-brain-749134.html)
+						* [Earth.com: Even routine hits from playing football can cause serious brain damage](https://www.earth.com/news/routine-hits-football-brain-damage/)
 				h3 Vision recovery after stroke affecting visual cortext
 				:marked
 					* [New Study Reshapes Understanding of How the Brain Recovers from Injury](https://www.urmc.rochester.edu/news/story/5519/new-study-reshapes-understanding-of-how-the-brain-recovers-from-injury.aspx)
