--- a/src/jade/media/index.jade
+++ b/src/jade/media/index.jade
@@ -11,7 +11,7 @@ body.media-page
 		.container
 			h1 Media 
 			p 
-				| The latest news from The Open Brain Project. <a href="/join"><svg class="icon icon-join"><use xlink:href="#join"></use></svg>Join the Open Brain Project</a> to receive information about how to post popular press coverage relevant to the mission of the Open Brain Project.
+				| Latest news from The Open Brain Project. <a href="/join"><svg class="icon icon-join"><use xlink:href="#join"></use></svg>Join the Open Brain Project</a> to receive information about how to post popular press coverage relevant to the mission of the Open Brain Project.
 	main.page-content
 		section
 			.container
